--- a/templates/quicksearch.html
+++ b/templates/quicksearch.html
@@ -9,8 +9,7 @@
 <input name="r" type="hidden" value="50" />
 <input name="site" type="hidden" value="search" />
 
-<br />
-<div style="float:left; padding-right:2px;"><input id="quicksearch" style="width:90px;" name="text" type="text" value="%search_term%..." onfocus="if(this.value == '%search_term%...')this.value=''" /></div>
+<input id="quicksearch" name="text" type="text" placeholder="%search_term%..." />
 <input type="submit" value="%submit%" class="btn btn-primary" />
     
 </form>
