fixed navbar + small changes

--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -30,7 +30,7 @@
         <ul class="dropdown-menu">
             <li><a href="index.php?site=forum">%forums%</a></li>
             <li><a href="index.php?site=guestbook">%guestbook%</a></li>
-            <li><a href="index.php?site=registered_users">%registered_users% <b class="caret"></b></a></li>
+            <li><a href="index.php?site=registered_users">%registered_users%</a></li>
             <li><a href="index.php?site=whoisonline">%who_is_online%</a></li>
             <li><a href="index.php?site=polls">%polls%</a></li>
             <li><a href="index.php?site=server">%servers%</a></li>
