--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,9 @@
 <form method="post" name="login" action="checklogin.php"> 
-<input name="ws_user" type="text" size="13" value="Username" onfocus="this.value=''" style="margin:2px;" /> 
-<input name="pwd" type="password" size="13" value="Password" onfocus="this.value=''" style="margin:2px;" />
-<input type="submit" name="submit" value="%login%" style="margin:2px;" class="btn btn-primary" /><br /> 
-&#8226; <a href="index.php?site=register">%register_now%</a><br />
-&#8226; <a href="index.php?site=lostpassword">%lost_password%</a><br />
-&#8226; <a href="index.php?site=registered_users">%registered_users%</a>
+<input name="ws_user" type="text" placeholder="Username" /> 
+<input name="pwd" type="password" placeholder="Password" />
+<input type="submit" name="submit" value="%login%" class="btn btn-primary" /> or <a href="index.php?site=register">%register_now%</a>
+    
+<ul class="nav nav-pills">
+    <li><a href="index.php?site=lostpassword">%lost_password%</a></li>
+</ul>
 </form>
