--- a/templates/quicksearch.html
+++ b/templates/quicksearch.html
@@ -1,15 +1,14 @@
-<form method="get" action="index.php" onsubmit="return formcheck_onsend('quicksearch');">
+<form method="get" action="index.php" onsubmit="return formcheck_onsend('quicksearch');" class="navbar-form pull-right">
 
-<input name="action" type="hidden" value="search" />
+<!--<input name="action" type="hidden" value="search" />
 <input name="articles" type="hidden" value="true" />
 <input name="faq" type="hidden" value="true" />
 <input name="forum" type="hidden" value="true" />
 <input name="news" type="hidden" value="true" />
 <input name="order" type="hidden" value="1" />
 <input name="r" type="hidden" value="50" />
-<input name="site" type="hidden" value="search" />
+<input name="site" type="hidden" value="search" />-->
 
-<input id="quicksearch" name="text" type="text" placeholder="%search_term%..." />
-<input type="submit" value="%submit%" class="btn btn-primary" />
-    
+<input name="text" type="text" placeholder="%search_term%..." />
+<input type="submit" value="%submit%" class="btn" />
 </form>
