--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,15 @@
 <form method="post" name="login" action="checklogin.php"> 
-<input name="ws_user" type="text" placeholder="Username" /> 
-<input name="pwd" type="password" placeholder="Password" />
-<input type="submit" name="submit" value="%login%" class="btn btn-primary" /> or <a href="index.php?site=register">%register_now%</a>
+
+    <input name="ws_user" type="text" placeholder="Username" required> 
+    <input name="pwd" type="password" placeholder="Password" required>
     
-<ul class="nav nav-pills">
-    <li><a href="index.php?site=lostpassword">%lost_password%</a></li>
-</ul>
+
+    <input type="submit" name="submit" value="%login%" class="btn btn-primary" /> 
+    <div class="pull-right">
+        <a href="index.php?site=lostpassword" class="pull-right">%lost_password%</a><br>
+        <a href="index.php?site=register">%register_now%</a></div>
+
+    
+    
+
 </form>
