changed poll and shoutbox

--- a/templates/comments_add_visitor.html
+++ b/templates/comments_add_visitor.html
@@ -39,11 +39,11 @@ function chkFormular() {
         <input name="mail" type="email" value="$mail" placeholder="%mail%" />
     </div>
     <div class="control-group">
-        <input name="url" type="text" value="$url" placeholder="%homepage%" />
+        <input name="url" type="url" value="$url" placeholder="%homepage%" />
     </div>
     <div class="control-group">
         <label for="captcha">$captcha</label>
-        <input name="captcha" id="captcha" type="text" value="" size="5" />
+        <input name="captcha" id="captcha" type="text" value="" size="5" placeholder="Enter Captcha" />
         <input name="captcha_hash" type="hidden" value="$hash" />
     </div>
     <div class="control-group">
