--- a/templates/news.html
+++ b/templates/news.html
@@ -3,7 +3,7 @@
         
         <div class="row">
             <div class="span5">
-                <h3><small>$isintern</small> <a href="index.php?site=news&newsID=$newsID">$headline</a></h3>
+                <h3><small>$isintern</small> <a href="index.php?site=news_comments&newsID=$newsID">$headline</a></h3>
             </div>
             <a href="index.php?site=news&show=$rubrikname" class="span1"><small>$rubrikname</small></a>
         </div>
