--- a/templates/polls_content.html
+++ b/templates/polls_content.html
@@ -1,4 +1,4 @@
-<p>$option: $stimmen %votes% - $perc%</p>
-<div class="progress">
-  <div class="bar" style="width: $perc%;"></div>
+<p>$option: $stimmen %votes%</p>
+<div class="progress progress-striped $active">
+  <div class="bar" style="width: $perc%;">$perc%</div>
 </div>
