--- a/templates/shoutbox.html
+++ b/templates/shoutbox.html
@@ -16,15 +16,28 @@ function chkFormularShoutBox() {
 }
 -->
 </script>
-<form name="shout" method="post" action="index.php?site=shoutbox_content&amp;action=save" onsubmit="return chkFormularShoutBox()">
+
+<form name="shout" method="post" action="index.php?site=shoutbox_content&amp;action=save" onsubmit="return chkFormularShoutBox()" class="form-horizontal">
 <script language="JavaScript" type="text/javascript">
 <!--
 fetch('shoutbox_content.php', 'shoutbox', 'replace', 'time', $refresh);
 -->
 </script>
 <div id="shoutbox" style="width: 100%;overflow: hidden; text-align: left;"></div>
-<input type="text" id="shoutbox_name" name="name" size="24" maxlength="255" style="margin: 2px;" $name_settings /><br />
-<input type="text" id="shoutbox_message" name="message" size="24" maxlength="255" style="margin: 2px;" value="Message" onfocus="this.value=''" /><br />
-$captcha_form
+    
+<div class="control-group">
+    <input type="text" id="shoutbox_name" name="name" size="24" maxlength="255" placeholder="Name" />
+</div>
+    
+<div class="control-group">
+    <input type="text" id="shoutbox_message" name="message" size="24" maxlength="255" placeholder="Message" />
+</div>
+    
+<div class="control-group">
+ <div class="input-prepend"> 
+  $captcha_form
+ </div>
+
+</div>
 <a href="javascript:if(chkFormularShoutBox())+document.shout.submit();" class="btn btn-primary">%shout%</a> - <a href="index.php?site=shoutbox_content&amp;action=showall">%all_messages%</a>
 </form>
