added some js, changed "Post News" and "Archive"

--- a/templates/news_archive_content.html
+++ b/templates/news_archive_content.html
@@ -1,5 +1,6 @@
-    
+<div class="inputselect btn btn-link">    
     <div class="span1">$multiple $date</div>
-    <div class="span1">$rubric</div>
-    <div class="span4">$headlines</div>
-    <hr class="span6">
+    <!--<div class="span1">$rubric</div>-->
+    <div class="span5">$headlines</div>
+</div>
+<hr class="span6">
