--- a/templates/news_archive_head.html
+++ b/templates/news_archive_head.html
@@ -3,3 +3,4 @@
     <div class="span1"><a href="index.php?site=news&amp;action=archive&amp;page=$page&amp;sort=date">%date%</a></div>
     <div class="span1"><a href="index.php?site=news&amp;action=archive&amp;page=$page&amp;sort=rubric">%rubric%</a></div>
     <div class="span4">%headline%</div>
+<hr class="span6">
