--- a/templates/poll_content.html
+++ b/templates/poll_content.html
@@ -1,1 +1,2 @@
-<input class="input" type="radio" name="vote" value="$n" /> $option<br />
+<p><input class="input" type="radio" name="vote" value="$n" /> $option</p>
+<p></p>
