--- a/templates/polls_edit.html
+++ b/templates/polls_edit.html
@@ -66,7 +66,10 @@ function chkFormular() {
         <div class="controls">
             <input type="number" min="0" max="24" name="laufzeit_hour" id="laufzeit_hour" size="2" maxlength="2" value="$ds[laufzeit_hour]" />
             <input type="number" min="0" max="59" name="laufzeit_minute" id="laufzeit_minute" size="2" maxlength="2" value="$ds[laufzeit_minute]" />
-            
+         </div>
+    </div>
+    <div class="control-group">
+        <div class="controls">
             <input type="number" min="1" max="31" name="laufzeit_day" id="laufzeit_day" size="2" maxlength="2" value="$ds[laufzeit_day]" />
             <input type="number" min="1" max="12" name="laufzeit_month" id="laufzeit_month" size="2" maxlength="2" value="$ds[laufzeit_month]" />
             <input type="number" name="laufzeit_year" id="laufzeit_year" size="2" maxlength="2" value="$ds[laufzeit_year]" />
