--- a/templates/poll_foot.html
+++ b/templates/poll_foot.html
@@ -1,11 +1,5 @@
-		</td>
-	</tr>
-	<tr>
-		<td><br /><input type="hidden" name="pollID" value="$pollID" />
-			<input type="submit" value="%vote%" /></td>
-	</tr>
-	<tr>
-		<td><br />&#8226; <a href="index.php?site=polls">%show_polls%</a></td>
-	</tr>
-</table>
+<div><input type="hidden" name="pollID" value="$pollID" />
+<input type="submit" value="%vote%" /></div>
+<div><a href="index.php?site=polls">%show_polls%</a></div>
+
 </form>
