--- a/templates/polls_new.html
+++ b/templates/polls_new.html
@@ -67,7 +67,10 @@ function chkFormular() {
         <div class="controls">
             <input type="number" min="0" max="24" name="laufzeit_hour" id="laufzeit_hour" size="2" placeholder="hh" maxlength="2" class="" />
             <input type="number" min="0" max="59" name="laufzeit_minute" id="laufzeit_minute" size="2" placeholder="mm" maxlength="2" class="" />
-            
+        </div>
+    </div>
+    <div class="control-group">   
+        <div class="controls">
             <input type="number" min="1" max="31" name="laufzeit_day" id="laufzeit_day" size="2" placeholder="DD" maxlength="2" />
             <input type="number" min="1" max="12" name="laufzeit_month" id="laufzeit_month" size="2" placeholder="MM" maxlength="2" />
             <input type="number" name="laufzeit_year" id="laufzeit_year" size="2" placeholder="YY" maxlength="2" />
