--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -15,7 +15,7 @@
     
     <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">%clan% <b class="caret"></b></a>
-        <ul class="dropdown-menu">
+        <ul class="dropdown-menu pull-right">
             <li><a href="index.php?site=about">%about_us%</a></li>
             <li><a href="index.php?site=squads">%squads%</a></li>
             <li><a href="index.php?site=members">%members%</a></li>
@@ -27,7 +27,7 @@
     
     <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">%community% <b class="caret"></b></a>
-        <ul class="dropdown-menu">
+        <ul class="dropdown-menu pull-right">
             <li><a href="index.php?site=forum">%forums%</a></li>
             <li><a href="index.php?site=guestbook">%guestbook%</a></li>
             <li><a href="index.php?site=registered_users">%registered_users%</a></li>
@@ -39,7 +39,7 @@
     
     <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">%media% <b class="caret"></b></a>
-        <ul class="dropdown-menu">
+        <ul class="dropdown-menu pull-right">
             <li><a href="index.php?site=files">%downloads%</a></li>
             <li><a href="index.php?site=demos">%demos%</a></li>
             <li><a href="index.php?site=links">%links%</a></li>
@@ -50,7 +50,7 @@
     
     <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">%miscellaneous% <b class="caret"></b></a>
-        <ul class="dropdown-menu">
+        <ul class="dropdown-menu pull-right">
             <li><a href="index.php?site=sponsors">%sponsors%</a></li>
             <li><a href="index.php?site=newsletter">%newsletter%</a></li>
             <li><a href="index.php?site=contact">%contact%</a></li>
