replaced glyphicons with fontawesome needed for addbbcode.html
js at the end of the file +fontawesome icons instead of glyphicons.
+chromeframe +holder.js +jquery local fallback +addbbcode template /
needs language files for tooltips

--- a/css/style.css
+++ b/css/style.css
@@ -6,3 +6,11 @@ body {
 .inputselect.btn.btn-danger div a {
     color:#ccc;
 }
+
+.chromeframe {
+    margin: 0.2em 0;
+    background: #ccc;
+    color: black;
+    padding: 0.2em 0;
+    text-align: center;
+}
