--- a/templates/register.html
+++ b/templates/register.html
@@ -32,7 +32,7 @@
 			<label class="control-label" for="inputPassword">%password%:</label>
 			<div class="controls">
             	<div class="input-prepend">
-                	<span class="add-on"><i class="icon-user"></i></span>
+                	<span class="add-on"><i class="icon-lock"></i></span>
 					<input type="password" id="inputPassword" name="pwd1" value="$pwd1" size="30" />
             	</div>
 			</div>
@@ -43,18 +43,7 @@
 			<label class="control-label" for="inputRepeat">%repeat%:</label>
 			<div class="controls">
             	<div class="input-prepend">
-                	<span class="add-on"><i class="icon-user"></i></span>
-					<input type="password" id="inputRepeat" name="pwd2" value="$pwd2" size="30" />
-            	</div>
-			</div>
-		</div>
-        
-        <!-- Password repeat -->
-		<div class="control-group">
-			<label class="control-label" for="inputRepeat">%repeat%:</label>
-			<div class="controls">
-            	<div class="input-prepend">
-                	<span class="add-on"><i class="icon-user"></i></span>
+                	<span class="add-on"><i class="icon-lock"></i></span>
 					<input type="password" id="inputRepeat" name="pwd2" value="$pwd2" size="30" />
             	</div>
 			</div>
@@ -65,7 +54,7 @@
 			<label class="control-label" for="inputMail">%mail%:</label>
 			<div class="controls">
             	<div class="input-prepend">
-                	<span class="add-on"><i class="icon-user"></i></span>
+                	<span class="add-on"><i class="icon-envelope"></i></span>
 					<input type="text" id="inputMail" name="mail" value="$mail" size="30" />
             	</div>
 			</div>
