--- a/templates/register.html
+++ b/templates/register.html
@@ -21,7 +21,7 @@
 			<div class="controls">
             	<div class="input-prepend">
                 	<span class="add-on"><i class="icon-user"></i></span>
-					<input type="text" id="inputUsername" name="username" value="$username" size="30" />
+					<input type="text" id="inputUsername" name="username" value="$username" size="30">
             	</div>
                 <span class="help-inline">(%for_login%)</span>
 			</div>
@@ -33,7 +33,7 @@
 			<div class="controls">
             	<div class="input-prepend">
                 	<span class="add-on"><i class="icon-lock"></i></span>
-					<input type="password" id="inputPassword" name="pwd1" value="$pwd1" size="30" />
+					<input type="password" id="inputPassword" name="pwd1" value="$pwd1" size="30">
             	</div>
 			</div>
 		</div>
@@ -44,7 +44,7 @@
 			<div class="controls">
             	<div class="input-prepend">
                 	<span class="add-on"><i class="icon-lock"></i></span>
-					<input type="password" id="inputRepeat" name="pwd2" value="$pwd2" size="30" />
+					<input type="password" id="inputRepeat" name="pwd2" value="$pwd2" size="30">
             	</div>
 			</div>
 		</div>
@@ -55,7 +55,7 @@
 			<div class="controls">
             	<div class="input-prepend">
                 	<span class="add-on"><i class="icon-envelope"></i></span>
-					<input type="text" id="inputMail" name="mail" value="$mail" size="30" />
+					<input type="email" id="inputMail" name="mail" value="$mail" size="30">
             	</div>
 			</div>
 		</div>
@@ -66,14 +66,14 @@
             <div class="controls">
         		<div class="input-prepend">
             		<span class="add-on">$captcha</span>
-                	<input type="text" id="inputSecurity_code" name="captcha" maxlength="5" size="5" class="input-small" />
-                	<input name="captcha_hash" type="hidden" value="$hash" />
+                	<input type="text" id="inputSecurity_code" name="captcha" maxlength="5" size="5" class="input-small">
+                	<input name="captcha_hash" type="hidden" value="$hash">
         		</div>
         	</div>
         </div>
         
         <!-- Register now -->
-        <input name="save" type="submit" value="%register_now%" class="btn btn-primary" />
+        <input name="save" type="submit" value="%register_now%" class="btn btn-primary">
         
 	</form>
 </div>
