--- a/templates/register.html
+++ b/templates/register.html
@@ -65,7 +65,7 @@
         	<label class="control-label" for="inputSecurity_code">%security_code%:</label>
             <div class="controls">
         		<div class="input-prepend">
-            		<span class="add-on">$captcha</span>
+            		<span class="add-on captcha-img">$captcha</span>
                 	<input type="text" id="inputSecurity_code" name="captcha" maxlength="5" size="5" class="input-small">
                 	<input name="captcha_hash" type="hidden" value="$hash">
         		</div>
