.captcha-img added and html5 valid tags

--- a/templates/shoutbox.html
+++ b/templates/shoutbox.html
@@ -26,11 +26,11 @@ fetch('shoutbox_content.php', 'shoutbox', 'replace', 'time', $refresh);
 <div id="shoutbox" style="width: 100%;overflow: hidden; text-align: left;"></div>
     
 <div class="control-group">
-    <input type="text" id="shoutbox_name" name="name" size="24" maxlength="255" placeholder="Name" />
+    <input type="text" id="shoutbox_name" name="name" size="24" maxlength="255" placeholder="Name">
 </div>
     
 <div class="control-group">
-    <input type="text" id="shoutbox_message" name="message" size="24" maxlength="255" placeholder="Message" />
+    <input type="text" id="shoutbox_message" name="message" size="24" maxlength="255" placeholder="Message">
 </div>
     
 $captcha_form
