fixed missing name attribute at nickname

--- a/templates/register.html
+++ b/templates/register.html
@@ -10,7 +10,7 @@
 			<div class="controls">
             	<div class="input-prepend">
                 	<span class="add-on"><i class="icon-user"></i></span>
-					<input type="text" id="inputEmail" value="$nickname" maxlength="30" size="30">
+					<input type="text" id="inputEmail" name="nickname" value="$nickname" maxlength="30" size="30">
             	</div>
 			</div>
 		</div>
