removed active state in navigation

--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -1,5 +1,5 @@
 <ul class="nav">
-    <li class="active dropbown">
+    <li class="dropbown">
         
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">%main% <b class="caret"></b></a>
         <ul class="dropdown-menu">
