removed stripped as there is nothing loading

--- a/templates/polls_content.html
+++ b/templates/polls_content.html
@@ -1,4 +1,4 @@
 <p>$option: $stimmen %votes%</p>
-<div class="progress progress-striped $active">
+<div class="progress $active">
   <div class="bar" style="width: $perc%;">$perc%</div>
 </div>
