--- a/templates/gallery_content_showlist.html
+++ b/templates/gallery_content_showlist.html
@@ -1,6 +1,16 @@
-<tr bgcolor="$bg">
-  <td width="$thumbwidth"><a href="index.php?site=gallery&amp;picID=$gallery[picture]"><img src="images/gallery/thumb/$gallery[picture].jpg" border="0" width="$thumbwidth" alt="" /></a></td>
-  <td>$gallery[date]</td>
-  <td><a href="index.php?site=gallery&amp;galleryID=$gallery[galleryID]">$gallery[name]</a></td>
-  <td>$gallery[count]</td>
-</tr>
+<div class="span3">
+    
+    <a href="index.php?site=gallery&amp;picID=$gallery[picture]"><img src="images/gallery/thumb/$gallery[picture].jpg" alt=""></a>
+
+    <h4>
+        <a href="index.php?site=gallery&amp;galleryID=$gallery[galleryID]">
+            <b>$gallery[name]</b>
+        </a>
+    </h4>
+      
+    <!--<p>
+        <i>%pictures%:</i> $gallery[pics]<br>
+        <i>%date%:</i> $gallery[date]
+    </p>-->
+    
+</div>
