--- a/templates/news_post.html
+++ b/templates/news_post.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<meta name="description" content="Clanpage using webSPELL 4 CMS" />
-	<meta name="author" content="webspell.org" />
-	<meta name="keywords" content="webspell, webspell4, clan, cms" />
-	<meta name="copyright" content="Copyright &copy; 2005 - 2011 by webspell.org" />
-	<meta name="generator" content="webSPELL" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="description" content="Clanpage using webSPELL 4 CMS">
+	<meta name="author" content="webspell.org">
+	<meta name="keywords" content="webspell, webspell4, clan, cms">
+	<meta name="copyright" content="Copyright &copy; 2005 - 2011 by webspell.org">
+	<meta name="generator" content="webSPELL">
 
 <!-- Head & Title include -->
 	<title>%new_post%</title>
-	<link href="_stylesheet.css" rel="stylesheet" type="text/css" />
-    <link href="css/bootstrap.min.css" rel="stylesheet" />
+	<link href="_stylesheet.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-responsive.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
 
 	<script src="js/bbcode.js" language="jscript" type="text/javascript"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js" language="jscrip" type="text/javascript"></script>
+    
 
 <!-- end Head & Title include -->
 <script language="JavaScript" type="text/JavaScript">
@@ -100,14 +100,14 @@ function update_textarea(value) {
 	for(var i = 0; i < value; i++) {
 		if(message[i] || headline[i] || langs[i] && langs[i] != default_language)
 		{
-			document.getElementById('news_textarea').innerHTML+='<div class="control-group"><input name="headline[]" type="text" value="'+headline[i]+'" size="80" onchange="headline['+i+']=this.value;" /><select name="lang[]" id="lang_' + i + '" onchange="langs['+i+']=this.value; update_language();"></select> </div><div class="control-group"><textarea name="message[' + i + ']" onfocus="which=this;textarea = \'message[' + i + ']\';" onblur="message['+i+']=this.value;" onchange="message['+i+']=this.value;" style="width:99%" rows="12">'+message[i]+'</textarea></div>';
+			document.getElementById('news_textarea').innerHTML+='<div class="control-group"><input name="headline[]" type="text" value="'+headline[i]+'" size="80" onchange="headline['+i+']=this.value;"><select name="lang[]" id="lang_' + i + '" onchange="langs['+i+']=this.value; update_language();"></select> </div><div class="control-group"><textarea name="message[' + i + ']" onfocus="which=this;textarea = \'message[' + i + ']\';" onblur="message['+i+']=this.value;" onchange="message['+i+']=this.value;" style="width:99%" rows="12">'+message[i]+'</textarea></div>';
 		}
 		else
 		{
 			message[i] = '';
 			headline[i] = '';
 			langs[i] = '';
-			document.getElementById('news_textarea').innerHTML+='<div class="control-group"><label for="headline">%headline%</label><input name="headline[]" type="text" value="" size="80" onchange="headline['+i+']=this.value;" /><select name="lang[]" id="lang_' + i + '" onchange="langs['+i+']=this.value; update_language();"></select> <div class="control-group"><textarea name="message[' + i + ']" onfocus="which=this;textarea = \'message[' + i + ']\';" onblur="message['+i+']=this.value;" onchange="message['+i+']=this.value;" style="width:99%" rows="12"></textarea></div>';
+			document.getElementById('news_textarea').innerHTML+='<div class="control-group"><label for="headline">%headline%</label><input name="headline[]" type="text" value="" size="80" onchange="headline['+i+']=this.value;"><select name="lang[]" id="lang_' + i + '" onchange="langs['+i+']=this.value; update_language();"></select> <div class="control-group"><textarea name="message[' + i + ']" onfocus="which=this;textarea = \'message[' + i + ']\';" onblur="message['+i+']=this.value;" onchange="message['+i+']=this.value;" style="width:99%" rows="12"></textarea></div>';
 		}
 	}
 	if(message.length > value) {
@@ -239,45 +239,45 @@ $langs_vars
             <table width="100%" border="0" cellpadding="0" cellspacing="2">
               <tr>
                 <td valign="top">%link% 1:
-                <input name="link1" type="text" value="$link1" />
-                <input name="url1" type="text" value="$url1" />
-                <input class="input" name="window1" type="radio" value="1" $window1_new />
+                <input name="link1" type="text" value="$link1">
+                <input name="url1" type="text" value="$url1">
+                <input class="input" name="window1" type="radio" value="1" $window1_new>
                 %new_window%
-                <input class="input" type="radio" name="window1" value="0" $window1_self/>
+                <input class="input" type="radio" name="window1" value="0" $window1_self>
                 %self%
-                <br />
+                <br>
                 %link% 2:
-                <input name="link2" type="text" value="$link2" />
-                <input name="url2" type="text" value="$url2" />
-                <input class="input" name="window2" type="radio" value="1" $window2_new/>
+                <input name="link2" type="text" value="$link2">
+                <input name="url2" type="text" value="$url2">
+                <input class="input" name="window2" type="radio" value="1" $window2_new>
                 %new_window%
-                <input class="input" type="radio" name="window2" value="0" $window2_self />
+                <input class="input" type="radio" name="window2" value="0" $window2_self>
                 %self%
-                <br />
+                <br>
                 %link% 3:
-                <input name="link3" type="text" value="$link3" />
-                <input name="url3" type="text" value="$url3" />
-                <input class="input" name="window3" type="radio" value="1" $window3_new/>
+                <input name="link3" type="text" value="$link3">
+                <input name="url3" type="text" value="$url3">
+                <input class="input" name="window3" type="radio" value="1" $window3_new>
                 %new_window%
-                <input class="input" type="radio" name="window3" value="0" $window3_self />
+                <input class="input" type="radio" name="window3" value="0" $window3_self>
                 %self%
-                <br />
+                <br>
                 %link% 4:
-                <input name="link4" type="text" value="$link4" />
-                <input name="url4" type="text" value="$url4" />
-                <input class="input" name="window4" type="radio" value="1" $window4_new/>
+                <input name="link4" type="text" value="$link4">
+                <input name="url4" type="text" value="$url4">
+                <input class="input" name="window4" type="radio" value="1" $window4_new>
                 %new_window%
-                <input class="input" type="radio" name="window4" value="0" $window4_self />
+                <input class="input" type="radio" name="window4" value="0" $window4_self>
                 %self%</td>
-                <td valign="top"><br />&nbsp;</td>
+                <td valign="top"><br>&nbsp;</td>
               </tr>
               <tr>
-                <td colspan="5"><hr /></td>
+                <td colspan="5"><hr></td>
               </tr>
               <tr align="right">
                 <td colspan="2">
-                <input type="hidden" name="userID" value="$userID" />
-                <input type="hidden" name="newsID" value="$newsID" />
+                <input type="hidden" name="userID" value="$userID">
+                <input type="hidden" name="newsID" value="$newsID">
                 <select name="comments">$comments</select>
                 </td>
               </tr>
@@ -292,9 +292,9 @@ $langs_vars
     <div id="news_textarea"></div>
     
     
-                <input type="submit" name="save" value="%save_news%" class="btn btn-danger" />
-                <input type="submit" name="preview" value="%preview%" class="btn btn-primary" />
-                <!--<input type="button" onclick="window.close()" value="%cancel%" class="btn btn-primary" />-->
+                <input type="submit" name="save" value="%save_news%" class="btn btn-danger">
+                <input type="submit" name="preview" value="%preview%" class="btn btn-primary">
+                <!--<input type="button" onclick="window.close()" value="%cancel%" class="btn btn-primary">-->
     
       <script language="JavaScript" type="text/javascript">
       /* <![CDATA[ */
@@ -304,5 +304,8 @@ $langs_vars
 
 </form>
 </div>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>') //local fallback</script>
+<script src="js/vendor/bootstrap.min.js" language="jscrip" type="text/javascript"></script>
 </body>
 </html>
