--- a/templates/gallery_content_categorys_head.html
+++ b/templates/gallery_content_categorys_head.html
@@ -2,3 +2,4 @@
     <li>%gallery% <span class="divider">/</span></li>
     <li><a href="index.php?site=gallery&amp;groupID=$groupID">$title</a></li>
 </ul>
+<div class="row">
