--- a/templates/gallery_comments.html
+++ b/templates/gallery_comments.html
@@ -18,7 +18,7 @@
     </li>
 </ul>
 
-<p>
+<p class="text-center">
     <a href="picture.php?id=$picID">
         <img src="picture.php?id=$picID" border="0" $width alt="" />
     </a>
