--- a/templates/gallery_content_showlist.html
+++ b/templates/gallery_content_showlist.html
@@ -1,16 +1,16 @@
 <div class="span3">
     
-    <a href="index.php?site=gallery&amp;picID=$gallery[picture]"><img src="images/gallery/thumb/$gallery[picture].jpg" alt=""></a>
+    <a href="index.php?site=gallery&amp;picID=$ds[picture]"><img src="images/gallery/thumb/$ds[picture].jpg" alt=""></a>
 
     <h4>
-        <a href="index.php?site=gallery&amp;galleryID=$gallery[galleryID]">
-            <b>$gallery[name]</b>
+        <a href="index.php?site=gallery&amp;galleryID=$ds[galleryID]">
+            <b>$ds[name]</b>
         </a>
     </h4>
       
-    <!--<p>
-        <i>%pictures%:</i> $gallery[pics]<br>
-        <i>%date%:</i> $gallery[date]
-    </p>-->
+    <p>
+        <i>%pictures%:</i> $ds[pics]<br>
+        <i>%date%:</i> $ds[date]
+    </p>
     
 </div>
