--- a/templates/gallery_content_showthumb.html
+++ b/templates/gallery_content_showthumb.html
@@ -1,4 +1,4 @@
-<div class="span3">
+<!--<div class="span3">
 
     <h4>
         <a href="index.php?site=gallery&amp;galleryID=$gallery[galleryID]">
@@ -6,4 +6,4 @@
         </a>
     </h4>
     
-</div>
+</div>-->
