changed padding from body to wrapper+added tooltip to headlines

--- a/templates/sc_headlines.html
+++ b/templates/sc_headlines.html
@@ -1,1 +1,1 @@
-<li><a href="index.php?site=news_comments&amp;newsID=$news_id&amp;lang=$lang">$headlines</a></li>
+<li data-toggle="tooltip" title="$date - $time"><a href="index.php?site=news_comments&amp;newsID=$news_id&amp;lang=$lang">$headlines</a></li>
