--- a/templates/gallery_content_showlist.html
+++ b/templates/gallery_content_showlist.html
@@ -1,6 +1,6 @@
 <div class="span3">
     
-    <a href="index.php?site=gallery&amp;picID=$ds[picture]"><img src="images/gallery/thumb/$ds[picture].jpg" alt=""></a>
+    <a href="index.php?site=gallery&amp;picID=$ds[picture]"><img src="images/gallery/thumb/$ds[picture].jpg" alt="" width="100%"></a>
 
     <h4>
         <a href="index.php?site=gallery&amp;galleryID=$ds[galleryID]">
