--- a/templates/gallery_showlist_group.html
+++ b/templates/gallery_showlist_group.html
@@ -1,7 +1,7 @@
 <div class="span3">
     
     <a href="index.php?site=gallery&amp;galleryID=$gallery[galleryID]">
-        <img src="$gallery[pic]" border="0" alt="" />
+        <img src="$gallery[pic]" width="100%" />
     </a>
 
     <h4>
