fixed gallery main view picture count

--- a/templates/gallery_content_showlist.html
+++ b/templates/gallery_content_showlist.html
@@ -9,7 +9,7 @@
     </h4>
       
     <p>
-        <i>%pictures%:</i> $ds[pics]<br>
+        <i>%pictures%:</i> $ds[count]<br>
         <i>%date%:</i> $ds[date]
     </p>
     
