modified archive list

--- a/templates/news_archive_content.html
+++ b/templates/news_archive_content.html
@@ -1,6 +1,8 @@
-<div class="inputselect btn btn-link">    
-    <div class="span1">$multiple $date</div>
-    <!--<div class="span1">$rubric</div>-->
-    <div class="span5">$headlines</div>
-</div>
-<hr class="span6">
+	<div class="row-fluid">
+		<div class="inputselect btn span12 btn-link">    
+		    <div class="span2">$multiple$date</div>
+		    <!--<div class="span2">$rubric</div>-->
+		    <div class="span10">$headlines</div>
+		</div>
+	</div>
+	<hr>
