--- a/templates/news_archive_head.html
+++ b/templates/news_archive_head.html
@@ -1,6 +1,7 @@
-<div class="row">
+<div class="row-fluid">
     
-    <div class="span1"><a href="index.php?site=news&amp;action=archive&amp;page=$page&amp;sort=date">%date%</a></div>
-    <div class="span1"><a href="index.php?site=news&amp;action=archive&amp;page=$page&amp;sort=rubric">%rubric%</a></div>
-    <div class="span4">%headline%</div>
-<hr class="span6">
+    <div class="span2"><a href="index.php?site=news&amp;action=archive&amp;page=$page&amp;sort=date">%date%</a></div>
+    <div class="span2"><a href="index.php?site=news&amp;action=archive&amp;page=$page&amp;sort=rubric">%rubric%</a></div>
+    <div class="span8">%headline%</div>
+</div>
+<hr>
