Switched to bootstrap 3

--- a/templates/comments.html
+++ b/templates/comments.html
@@ -1,21 +1,20 @@
-<article class="row">
+<section class="row">
   
-            
-        <div class="span2">
+        <div class="col-lg-2">
             $avatar
         </div>
         
-        <div class="span4">      
+        <div class="col-lg-4">      
             <p>$content<br>$edit $actions</p>
         </div>                
     
-        <div class="span6">
+        <footer class="col-lg-6">
             <p></p>
             <p>
               <i class="icon-user"></i> by $poster
               | <i class="icon-calendar"></i> $date
             </p>
-        </div>
+        </footer>
       
-</article>
+</section>
 <hr>
