--- a/templates/gallery_gallery_head.html
+++ b/templates/gallery_gallery_head.html
@@ -1,6 +1,6 @@
 <ul class="breadcrumb">
     <li><a href="index.php?site=gallery">%gallery%</a> <span class="divider">/</span></li>
-    <li>$group <span class="divider">/</span></li>
+    <li>$group</li>
     <li class="active">$title</li>
     <li class="active pull-right">$pics %pictures% </li>
 </ul>
