--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,14 @@
-.ws_main_wrapper {
-    margin-bottom: 40px;
+/* Move down content because we have a fixed navbar that is 50px tall */
+body {
+  padding-top: 50px;
 }
 
-/* Removing unwanted whitespace above navigation */ 
-@media (min-width: 1200px) {
-    .ws_main_wrapper {
-        margin-top:60px;
-    }
+/* Responsive: Portrait tablets and up */
+@media screen and (min-width: 768px) {
+  /* Let the jumbotron breathe */
+  .jumbotron {
+    margin-top: 20px;
+  }
 }
 
 .inputselect.btn.btn-danger div a {
