--- a/templates/gallery_content_showlist.html
+++ b/templates/gallery_content_showlist.html
@@ -1,6 +1,6 @@
-<div class="span3">
+<div class="col-lg-6">
     
-    <a href="index.php?site=gallery&amp;picID=$ds[picture]"><img src="images/gallery/thumb/$ds[picture].jpg" alt="" width="100%"></a>
+    <a href="index.php?site=gallery&amp;picID=$ds[picture]"><img src="images/gallery/thumb/$ds[picture].jpg" width="100%" class="img-responsive"></a>
 
     <h4>
         <a href="index.php?site=gallery&amp;galleryID=$ds[galleryID]">
