--- a/templates/gallery_group_head.html
+++ b/templates/gallery_group_head.html
@@ -1,5 +1,5 @@
 <ul class="breadcrumb" id="picture">
-    <li><a href="index.php?site=gallery">%gallery%</a> <span class="divider">/</span></li>
+    <li><a href="index.php?site=gallery">%gallery%</a></li>
     <li>$group</li>
 </ul>
 
