--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -1,4 +1,4 @@
-<ul class="nav">
+<ul class="nav navbar-nav">
     <li class="dropdown">
         
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">%main% <b class="caret"></b></a>
