--- a/templates/news.html
+++ b/templates/news.html
@@ -1,32 +1,28 @@
-<article class="row-fluid">     
-        <div class="row-fluid">
-            <div class="span10">
-                <h3><small>$isintern</small> <a href="index.php?site=news_comments&amp;newsID=$newsID">$headline</a></h3>
-            </div>
-            <a href="index.php?site=news&amp;show=$rubrikname" class="span2"><small>$rubrikname</small></a>
+<article>
+    
+    <header class="row">
+        <div class="col-lg-9">
+            <h3><small>$isintern</small> <a href="index.php?site=news_comments&amp;newsID=$newsID">$headline</a></h3>
         </div>
-        
-        <div class="row-fluid">
-            
-            <div class="span4">
+        <a href="index.php?site=news&amp;show=$rubrikname" class="col-lg-3"><small>$rubrikname</small></a>
+    </header>    
+    
+    <section class="row">        
+        <div class="col-lg-4">
                 <div class="thumbnail">$rubricpic</div>
-            </div>
-            
-            <div class="span8">      
-            <p>$content<br>$adminaction</p>
         </div>
-            
-    </div>
+        <div class="col-lg-8">      
+            <p>$content<br>$adminaction</p>
+        </div>    
+    </section>
         
-    <div class="row-fluid">
-      <div class="span12">
-        <p></p>
-        <p>
-          <i class="icon-user"></i> by $poster
-          | <i class="icon-calendar"></i> $date
-          | <i class="icon-comment"></i> $comments
-        </p>
-      </div>
-    </div>
+  <footer class="col-lg-12">
+    <p></p>
+    <p>
+      <i class="icon-user"></i> by $poster
+      | <i class="icon-calendar"></i> $date
+      | <i class="icon-comment"></i> $comments
+    </p>
+  </footer>
 </article>
 <hr>
