--- a/templates/poll_voted_content.html
+++ b/templates/poll_voted_content.html
@@ -1,4 +1,4 @@
 <p>$option</p>
 <div class="progress">
-  <div class="bar" style="width: $picwidth%;">{$perc}%</div>
+  <div class="progress-bar" style="width: $picwidth%;">{$perc}%</div>
 </div>
