--- a/templates/quicksearch.html
+++ b/templates/quicksearch.html
@@ -9,6 +9,6 @@
 <input name="r" type="hidden" value="50" />
 <input name="site" type="hidden" value="search" />
 
-<input name="text" type="text" placeholder="%search_term%..." />
+<input name="text" type="text" placeholder="%search_term%..." class="form-control" />
 <!--<input type="submit" value="%search%" class="btn" />-->
 </form>
