--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,14 @@
 <form method="post" name="login" action="checklogin.php"> 
-
-    <input name="ws_user" type="text" placeholder="Username" required> 
-    <input name="pwd" type="password" placeholder="Password" required>
+    <div class="form-group">
+        <input name="ws_user" type="text" placeholder="Username" class="form-control" required> 
+        <input name="pwd" type="password" placeholder="Password" class="form-control" required>
+    </div>
     
-
-    <input type="submit" name="submit" value="%login%" class="btn btn-primary" /> 
-    <div class="pull-right">
-        <a href="index.php?site=lostpassword" class="pull-right">%lost_password%</a><br>
-        <a href="index.php?site=register">%register_now%</a></div>
-
-    
-    
-
+    <div class="form-group">
+        <input type="submit" name="submit" value="%login%" class="btn btn-primary" /> 
+        <div class="pull-right">
+            <a href="index.php?site=lostpassword" class="pull-right">%lost_password%</a><br>
+            <a href="index.php?site=register">%register_now%</a>
+        </div>
+    </div>
 </form>
