--- a/templates/sc_newsletter.html
+++ b/templates/sc_newsletter.html
@@ -1,6 +1,9 @@
-
 <form action="index.php?site=newsletter&amp;action=save" method="post" name="scnewsletter">
-<label class="control-label" for="email">%register_newsletter%</label>
-<input name="email" type="email" value="$usermail" />
-<input name="post" type="submit" value="%submit%" class="btn btn-primary" />
+    <div class="form-group">
+        <label class="form-label" for="email">%register_newsletter%</label>
+        <input name="email" type="email" value="$usermail" class="form-control" />
+    </div>
+    <div class="form-group">
+        <input name="post" type="submit" value="%submit%" class="btn btn-primary" />
+    </div>
 </form>
