--- a/templates/shoutbox.html
+++ b/templates/shoutbox.html
@@ -25,15 +25,14 @@ fetch('shoutbox_content.php', 'shoutbox', 'replace', 'time', $refresh);
 </script>
 <div id="shoutbox" style="width: 100%;overflow: hidden; text-align: left;"></div>
     
-<div class="control-group">
-    <input type="text" id="shoutbox_name" name="name" size="24" maxlength="255" placeholder="Name">
-</div>
-    
-<div class="control-group">
-    <input type="text" id="shoutbox_message" name="message" size="24" maxlength="255" placeholder="Message">
+<div class="form-group">
+    <input type="text" id="shoutbox_name" name="name" maxlength="255" placeholder="Name" class="form-control" required>
+
+    <input type="text" id="shoutbox_message" name="message" maxlength="255" placeholder="Message" class="form-control" required>
 </div>
     
 $captcha_form
-
+<div class="form-group">
 <a href="javascript:if(chkFormularShoutBox())+document.shout.submit();" class="btn btn-primary">%shout%</a> - <a href="index.php?site=shoutbox_content&amp;action=showall">%all_messages%</a>
+</div>
 </form>
