--- a/templates/gallery_showlist_group.html
+++ b/templates/gallery_showlist_group.html
@@ -1,4 +1,4 @@
-<div class="span3">
+<div class="col-lg-6">
     
     <a href="index.php?site=gallery&amp;galleryID=$gallery[galleryID]">
         <img src="$gallery[pic]" width="100%" />
