--- a/templates/gallery_comments.html
+++ b/templates/gallery_comments.html
@@ -1,7 +1,7 @@
 <ul class="breadcrumb" id="picture">
-    <li><a href="index.php?site=gallery">%gallery%</a> <span class="divider">/</span></li>
-    <li>$group <span class="divider">/</span></li>
-    <li>$gallery <span class="divider">/</span></li>
+    <li><a href="index.php?site=gallery">%gallery%</a></li>
+    <li>$group</li>
+    <li>$gallery</li>
     <li class="active">$picturename</li>
 </ul>
 
