--- a/templates/gallery_content_categorys_head.html
+++ b/templates/gallery_content_categorys_head.html
@@ -1,5 +1,5 @@
 <ul class="breadcrumb">
-    <li>%gallery% <span class="divider">/</span></li>
+    <li>%gallery%</li>
     <li><a href="index.php?site=gallery&amp;groupID=$groupID">$title</a></li>
 </ul>
 <div class="row">
