--- a/templates/gallery_showlist.html
+++ b/templates/gallery_showlist.html
@@ -2,7 +2,7 @@
     <a href="index.php?site=gallery&amp;picID=$pic[picID]"><img src="images/gallery/thumb/$pic[pic]" alt="$pic[name]" width="100%" /></a>
     <div class="carousel-caption">
         <h4>$pic[name]</h4>
-        <p>$pic[comment]</p>
+        $pic[comment]
     </div>
 </div>
 
