--- a/templates/search_form_loggedin.html
+++ b/templates/search_form_loggedin.html
@@ -5,7 +5,7 @@
                 <input id="text" name="text" type="text" value="$text" class="form-control" autofocus>
                 
                 <span class="input-group-btn">
-                    <input type="submit" value="%start_search%" class="btn btn-primary" />
+                    <input type="submit" value="%start_search%" class="btn btn-primary">
                 </span>
         </div>
 
