--- a/templates/logged.html
+++ b/templates/logged.html
@@ -4,7 +4,7 @@
     <li class="nav-header"><span style="padding-bottom:4px; padding-top:4px;">$l_avatar</span></li>
     <li><a href="index.php?site=loginoverview">%overview%</a></li>
     <li><a href="index.php?site=myprofile">%edit_account%</a></li>
-    <li><a href="index.php?site=messenger">%messenger%</a>$newmessages</li>
+    <li><a href="index.php?site=messenger"><span class="badge pull-right">$newmessages</span> %messenger%</a></li>
     <li><a href="index.php?site=usergallery">%galleries%</a></li>
     <li><a href="index.php?site=buddys">%buddy_list%</a></li>
     $admin
