--- a/templates/search_form_notloggedin.html
+++ b/templates/search_form_notloggedin.html
@@ -5,7 +5,7 @@
             <input id="text" name="text" type="text" value="$text" class="form-control" autofocus>
             
             <span class="input-group-btn">
-                <input type="submit" value="%start_search%" class="btn btn-primary" />
+                <input type="submit" value="%start_search%" class="btn btn-primary">
             </span>
         </div>
         
@@ -13,8 +13,8 @@
     <div class="form-group">
         <div class="input-group">
             <span class="input-group-addon">$captcha</span>
-            <input name="captcha" id="captcha" type="text" placeholder="Enter Captcha"  class="form-control" />
-            <input name="captcha_hash" type="hidden" value="$hash" />
+            <input name="captcha" id="captcha" type="text" placeholder="Enter Captcha"  class="form-control">
+            <input name="captcha_hash" type="hidden" value="$hash">
         </div>
     </div>
     
