--- a/templates/search_form_notloggedin.html
+++ b/templates/search_form_notloggedin.html
@@ -13,7 +13,7 @@
     <div class="form-group">
         <div class="input-group">
             <span class="input-group-addon">$captcha</span>
-            <input name="captcha" id="captcha" type="text" placeholder="Enter Captcha"  class="form-control">
+            <input name="captcha" id="captcha" type="number" placeholder="Enter Captcha" autocomplete="off" class="form-control">
             <input name="captcha_hash" type="hidden" value="$hash">
         </div>
     </div>
