--- a/templates/comments_add_visitor.html
+++ b/templates/comments_add_visitor.html
@@ -47,7 +47,7 @@ function chkFormular() {
     <div class="form-group">
         <div class="input-group">
             <span class="input-group-addon">$captcha</span>
-            <input name="captcha" id="captcha" type="text" placeholder="Enter Captcha"  class="form-control" />
+            <input name="captcha" id="captcha" type="number" placeholder="Enter Captcha" autocomplete="off" class="form-control" />
             <input name="captcha_hash" type="hidden" value="$hash" />
         </div>
     </div>
