--- a/templates/comments_add_visitor.html
+++ b/templates/comments_add_visitor.html
@@ -46,7 +46,7 @@ function chkFormular() {
     </div>
     <div class="form-group">
         <div class="input-group">
-            <span class="input-group-addon">$captcha</span>
+            <span class="input-group-addon captcha-img">$captcha</span>
             <input name="captcha" id="captcha" type="text" placeholder="Enter Captcha"  class="form-control" />
             <input name="captcha_hash" type="hidden" value="$hash" />
         </div>
