--- a/templates/comments.html
+++ b/templates/comments.html
@@ -1,20 +1,23 @@
-<section class="row">
-  
-        <div class="col-lg-2">
-            $avatar
-        </div>
-        
-        <div class="col-lg-4">      
-            <p>$content<br>$edit $actions</p>
-        </div>                
+<section class="panel">
+<div class="ws_comments">
+
+    <p class="pull-left avatar">
+        $avatar
+    </p>
+   
+    <p>
+        $content<br>
+        $edit $actions
+    </p>   
+</div>
     
-        <footer class="col-lg-6">
-            <p></p>
-            <p>
-              <i class="icon-user"></i> by $poster
-              | <i class="icon-calendar"></i> $date
-            </p>
-        </footer>
+    <footer class="panel-footer">
+        <p></p>
+        <p>
+          <i class="icon-user"></i> by $poster
+          | <i class="icon-calendar"></i> $date
+        </p>
+    </footer>
       
 </section>
 <hr>
