--- a/templates/faq_answer_head.html
+++ b/templates/faq_answer_head.html
@@ -1,5 +1,5 @@
 <ul class="breadcrumb">
-    <li><a href="index.php?site=faq">%categories%</a> <span class="divider">/</span></li>
-    <li>$backlink <span class="divider">/</span></li>
+    <li><a href="index.php?site=faq">%categories%</a></li>
+    <li>$backlink</li>
     <li class="active">$question</li>
 </ul>
