--- a/templates/faq_category.html
+++ b/templates/faq_category.html
@@ -1,3 +1,4 @@
-<h5>$faqcatname ( $anzfaqs %faqs% )</h5>
-<p>$description</p>
-<hr>
+<section class="panel">
+    <header class="panel-heading">$faqcatname ( $anzfaqs %faqs% )</header>
+    <article>$description</article>
+</section>
