--- a/templates/faq_question_head.html
+++ b/templates/faq_question_head.html
@@ -1,6 +1,6 @@
 <ul class="breadcrumb">
-    <li><a href="index.php?site=faq">%categories%</a> <span class="divider">/</span></li>
-    <li>$faqcatname <span class="divider">/</span></li>
+    <li><a href="index.php?site=faq">%categories%</a></li>
+    <li>$faqcatname</li>
 </ul>
 
 <ul class="nav nav-pills nav-stacked">
