--- a/templates/sponsors.html
+++ b/templates/sponsors.html
@@ -1,12 +1,10 @@
-<table width="100%" cellspacing="0" border="0" cellpadding="2" bgcolor="$border">
-  <tr>
-    <td bgcolor="$bghead" class="title">&nbsp; &#8226; $sponsor</td>
-  </tr>
-  <tr>
-    <td bgcolor="$pagebg"></td>
-  </tr>
-  <tr>
-    <td bgcolor="$bg1"><center>$banner</center><br />$info<br /><br />$link</td>
-  </tr>
-</table>
-<br /><br />
+<div class="panel">
+    <h5 class="panel-heading">$sponsor</h5>
+    <div>
+        <p class="text-center">$banner</p>
+    </div>
+    <p>$info</p>
+    <div class="panel-footer hidden">
+        $link
+    </div>
+</div>
