Started adding Forum + Grid Example File

--- a/templates/news_archive_head.html
+++ b/templates/news_archive_head.html
@@ -1,7 +1,7 @@
-<div class="row-fluid">
+<div class="row">
     
-    <div class="span2"><a href="index.php?site=news&amp;action=archive&amp;page=$page&amp;sort=date">%date%</a></div>
-    <div class="span2"><a href="index.php?site=news&amp;action=archive&amp;page=$page&amp;sort=rubric">%rubric%</a></div>
-    <div class="span8">%headline%</div>
+    <div class="col-xs-3 col-lg-2"><a href="index.php?site=news&amp;action=archive&amp;page=$page&amp;sort=date">%date%</a></div>
+    <div class="visible-lg col-lg-2"><a href="index.php?site=news&amp;action=archive&amp;page=$page&amp;sort=rubric">%rubric%</a></div>
+    <div class="col-xs-9 col-lg-8">%headline%</div>
 </div>
 <hr>
