--- a/templates/news_archive_content.html
+++ b/templates/news_archive_content.html
@@ -1,8 +1,6 @@
-	<div class="row-fluid">
-		<div class="inputselect btn span12 btn-link">    
-		    <div class="span2">$multiple$date</div>
-		    <!--<div class="span2">$rubric</div>-->
-		    <div class="span10">$headlines</div>
-		</div>
-	</div>
-	<hr>
+<div class="row inputselect btn-link">    
+    <div class="col-xs-3 col-lg-2">$multiple$date</div>
+    <div class="col-lg-2 visible-lg">$rubric</div>
+    <div class="col-xs-9 col-lg-8">$headlines</div>
+</div>
+<hr>
