--- a/templates/search_form_notloggedin.html
+++ b/templates/search_form_notloggedin.html
@@ -12,7 +12,7 @@
     </div>
     <div class="form-group">
         <div class="input-group">
-            <span class="input-group-addon">$captcha</span>
+            <span class="input-group-addon captcha-img">$captcha</span>
             <input name="captcha" id="captcha" type="number" placeholder="Enter Captcha" autocomplete="off" class="form-control">
             <input name="captcha_hash" type="hidden" value="$hash">
         </div>
