--- a/templates/members_content_foot.html
+++ b/templates/members_content_foot.html
@@ -1,4 +1,4 @@
         </table>
     </div><!-- panel-body -->
-    <div class="panel-footer">$details</div>
+    <div class="panel-footer hidden">$details</div>
 </div><!-- panel -->
