restored panel style

--- a/templates/sponsors.html
+++ b/templates/sponsors.html
@@ -1,9 +1,11 @@
-<div class="panel">
-    <h5 class="panel-heading">$sponsor</h5>
-    <div>
-        <p class="text-center">$banner</p>
+<div class="panel panel-default">
+    <div class="panel-heading">
+        $sponsor
     </div>
-    <p>$info</p>
+    <div class="panel-body">
+        <p class="text-center">$banner</p>
+        <p>$info</p>
+    </div>
     <div class="panel-footer hidden">
         $link
     </div>
